# CSC213

./: CMakeLists.txt  README.md  main.c
Archive-Printer/print-archive/: print-archive  testfile.txt
Memory-Allocator/malloc/: allocator.c
Ngram-Generator/ngram/: ngram  ngram.c
Parallel-LetterCount/lettercount/: lettercount.c  testfile.txt
Password-Cracker/: ._Makefile  Makefile  README.md  myMD5.c  password-cracker  password-cracker.c
Password-Cracker/CPU-password-cracker/: README.md  password-cracker  password-cracker.c
Password-Cracker/CUDA_port/: Makefile  README.md  generate_md5_hash  generate_md5_hash.cu  gpu_md5.cu  gpu_md5.cuh  password-cracker-gpu  password-cracker.cu
Password-Cracker/GPU-password-cracker/: Makefile  README.md  generate-md5-hash  generate-md5-hash.cu  gpu-md5.cu  password-cracker-gpu  password-cracker.cu
Password-Cracker/openssl/: INSTALL_RECEIPT.json
PeerToPeer-Chat/: README.md  get_ip.c  get_ip.h  hashcode.c  message.h  p2p_test_file_quang_nguyen.txt  p2p_thread.c  p2p_thread.h  p2pchat  peer_list.c  socket.h  utility.h
Virtual-Memory/: lazycopy-test
malloc/: allocator.c  testfile.txt
networking/: client  client.c  server  server.c  socket.h
p2pchat/: Makefile  hashcode.c  hashcode.h  message.c  message.h  p2p_thread.c  p2p_thread.h  p2pchat  p2pchat.c  peer_list.c  peer_list.h  utility.h
password-cracker/: password-cracker  password-cracker.c  testfile.txt
shell/: mysh  mysh.c  mysh.c~  testfile.odt  testfile.txt
virtual-address-lab/: #lazycopy.h#  lazycopy.c  libetsbefriends.c
worm/: scheduler.c  worm
(+31 files in other folders)
